--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Script Js -->
+
     <title>Mohan Skin and Gastro Care</title>
     <meta
       name="description"
@@ -60,7 +63,7 @@
                   id="nav-content"
                 >
                   <a class="navbar-brand" href="index.html"
-                    ><img src="images/logo.png" height="50" alt="#"
+                    ><img src="images/logo.png" class="img-fluid"  alt="#"
                   /></a>
                   <button
                     class="navbar-toggler nav-custome1"
@@ -613,7 +616,7 @@
                 </div>
               </div>
 
-              <a href="gallery.html" class="custom-btn btn-16 mt-5">View Gallery</a>
+              <a href="gallery.html" class="custom-btn btn-16 my-5">View Gallery</a>
             </div>
           </div>
         </div>
@@ -948,23 +951,23 @@
     <!--//End Footer -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+  
+      <script src="js/jquery-3.5.1.min.js" ></script>
+    <script src="js/popper.min.js" ></script>
+    <script src="js/bootstrap.min.js" ></script>
     <!-- Slick Slider Js -->
-    <script src="js/slick.min.js"></script>
+    <script src="js/slick.min.js" ></script>
     <!-- Before & After Js -->
-    <script src="js/jquery.event.move.js"></script>
-    <script src="js/jquery.twentytwenty.js"></script>
-    <!-- Magnific popup Js -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/jquery.event.move.js" ></script>
+        <script src="js/jquery.twentytwenty.js" defer></script>
+        <script src="js/jquery.magnific-popup.min.js" ></script>
     <!-- gsap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
       <!-- scrolltrigger -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
-    <!-- Script Js -->
-    <script src="js/script.js"></script>
-    <script type="text/javascript">
+    <!-- Magnific popup Js -->
+        <script src="js/script.js"></script>
+    <script type="text/javascript" >
       !(function (t, e) {
         t.artibotApi = {
           l: [],
@@ -1000,5 +1003,6 @@
             });
       })(window, document);
     </script>
+    
   </body>
 </html>
