--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                 </div>
               </div>
 
-              <a href="gallery.html" class="custom-btn btn-16 my-5">View Gallery</a>
+              <a href="gallery.html" class="custom-btn btn-16 mb-5 my-5">View Gallery</a>
             </div>
           </div>
         </div>
