--- a/dermatology.html
+++ b/dermatology.html
@@ -326,7 +326,7 @@
         <ul class="list-item">
           <!-- Start Single Service List -->
           <li>
-            <a href="cosmetic.html">
+            <a href="cosmology.html">
               <div class="icon-image">
                 <img src="images/facial.png" alt="" />
               </div>
@@ -492,7 +492,7 @@
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html"
+                  <a href="services.html"
                     ><i class="fas fa-angle-double-right"></i>Services</a
                   >
                 </li>
@@ -521,23 +521,23 @@
               </h4>
               <ul>
                 <li>
-                  <a href="services-detail.html#dermatology"
+                  <a href="dermatology.html"
                     ><i class="fas fa-angle-double-right"></i>Dermatology</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#cosmetology"
+                  <a href="cosmetology.html"
                     ><i class="fas fa-angle-double-right"></i>Cosmetology and
                     Aesthetic sciences</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#trichology"
+                  <a href="trichology.html"
                     ><i class="fas fa-angle-double-right"></i>Trichology</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#gastro"
+                  <a href="gastro.html"
                     ><i class="fas fa-angle-double-right"></i>Gastro Care</a
                   >
                 </li>
