--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                     Anti-ageing therapy- Botox, Fillers, Thread lifting, Lasers
                     etc.
                   </p>
-                  <a class="align-self-baseline" href="services-detail.html"
+                  <a class="align-self-baseline" href="services.html"
                     >READ MORE</a
                   >
                 </div>
@@ -525,7 +525,7 @@
 
                   <a
                     class="align-self-baseline"
-                    href="services-detail.html#gastro"
+                    href="services.html#gastro"
                     >READ MORE</a
                   >
                 </div>
@@ -645,7 +645,7 @@
                 whitening treatments...
               </p>
               <a
-                href="services-detail.html#cosmetology"
+                href="services.html"
                 class="btn btn-dark mt-4"
                 >READ MORE</a
               >
@@ -724,7 +724,7 @@
                 this day. Add to this his experience of leading and conducting
                 operations in major hospitals, you are in the hands of the best
                 when you decide to use our services.
-                <a href="/services-detail.html#gastro">Readmore</a>
+                <a href="/services.html">Readmore</a>
               </p>
             </div>
           </div>
@@ -856,7 +856,7 @@
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html"
+                  <a href="services.html"
                     ><i class="fas fa-angle-double-right"></i>Services</a
                   >
                 </li>
@@ -883,23 +883,23 @@
               <h4>Our Services <span class="animate-border border-white"></span></h4>
               <ul>
                 <li>
-                  <a href="services-detail.html#dermatology"
+                  <a href="dermatology.html"
                     ><i class="fas fa-angle-double-right"></i>Dermatology</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#cosmetology"
+                  <a href="cosmetology.html"
                     ><i class="fas fa-angle-double-right"></i>Cosmetology and
                     Aesthetic sciences</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#trichology"
+                  <a href="trichology.html"
                     ><i class="fas fa-angle-double-right"></i>Trichology</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#gastro"
+                  <a href="gastro.html"
                     ><i class="fas fa-angle-double-right"></i>Gastro Care</a
                   >
                 </li>
