--- a/services.html
+++ b/services.html
@@ -167,7 +167,7 @@
                 <ul class="list-item">
                   <!-- Start Single Service List -->
                   <li>
-                    <a href="service-details.html">
+                    <a href="dermatology.html">
                       <div class="icon-image">
                         <img src="images/spots.png" alt="" />
                       </div>
@@ -187,7 +187,7 @@
                   <!-- End Single Service List -->
                   <!-- Start Single Service List -->
                   <li>
-                    <a href="service-details.html">
+                    <a href="trichology.html">
                       <div class="icon-image">
                         <img src="images/trichology.png" alt="" />
                       </div>
@@ -197,7 +197,7 @@
                   <!-- End Single Service List -->
                   <!-- Start Single Service List -->
                   <li>
-                    <a href="service-details.html">
+                    <a href="laser.html">
                       <div class="icon-image">
                         <img src="images/laser.png" alt="" />
                       </div>
@@ -207,7 +207,7 @@
                   <!-- End Single Service List -->
                   <!-- Start Single Service List -->
                   <li>
-                    <a href="service-details.html">
+                    <a href="gastro.html">
                       <div class="icon-image">
                         <img src="images/liver.png" alt="" />
                       </div>
@@ -349,7 +349,7 @@
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html"
+                  <a href="services.html"
                     ><i class="fas fa-angle-double-right"></i>Services</a
                   >
                 </li>
@@ -378,23 +378,23 @@
               </h4>
               <ul>
                 <li>
-                  <a href="services-detail.html#dermatology"
+                  <a href="dermatology.html"
                     ><i class="fas fa-angle-double-right"></i>Dermatology</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#cosmetology"
+                  <a href="cosmetology.html"
                     ><i class="fas fa-angle-double-right"></i>Cosmetology and
                     Aesthetic sciences</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#trichology"
+                  <a href="trichology.html"
                     ><i class="fas fa-angle-double-right"></i>Trichology</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#gastro"
+                  <a href="gastro.html"
                     ><i class="fas fa-angle-double-right"></i>Gastro Care</a
                   >
                 </li>
