added cosmetology and dermatology

--- a/cosmetology.html
+++ b/cosmetology.html
@@ -76,7 +76,7 @@
                       <li class="nav-item">
                         <a
                           class="nav-link active"
-                          href="services-detail.html"
+                          href="services.html"
                           role="button"
                         >
                           Services
@@ -152,12 +152,16 @@
             "
           >
             <div class="col-12">
-              <h3>What is Dermatology?</h3>
+              <h3>What is Cosmetology?</h3>
               <p>
-                A dermatologist is a type of doctor that diagnoses and treats
-                conditions that affect your hair, skin, and nails. They also
-                treat conditions that affect mucous membranes, or the delicate
-                tissue that lines your nose, mouth, and eyelids.
+                Cosmetology is the art and science beautifying the hair, nails,
+                and skin. A cosmetologist is an expert in applying cosmetic
+                procedures, therapies, and treatments to beautify one’s outer
+                appearance., and implementing cosmetic treatments to people’s
+                hair, skin, and nails. Specific disciplines in cosmetology
+                include hairstyling (haircutting and coloring), esthetics (skin
+                care), makeup application, nail care (manicures and pedicures),
+                and other beauty treatments.
               </p>
               <p>
                 Your skin is your body’s largest organ. It contains nerve
@@ -170,29 +174,35 @@
                 refer their patients to dermatologists for specialized care.
               </p>
               <hr />
-              <h3 class="my-5">Our Dermetology Services</h3>
+              <h3 class="my-5">Our Cosmetic and Aesthetic Science Services</h3>
 
-              <h5><i class="fas fa-caret-right"></i> Acne Removal</h5>
+              <h5>
+                <i class="fas fa-caret-right"></i> Chemical Peeling – Acne, Skin
+                pigmentation, Under eye pigmentation, Dark lips
+              </h5>
               <div class="row">
                 <div class="col-md-7">
                   <p>
-                    Acne, pimples or zits are more common among teenagers, but
-                    they are increasingly becoming prominent in adults and
-                    elderlies. It is largely caused by increased activity of the
-                    sebaceous glands (oil producing glands under the skin). They
-                    are found mainly on the face, neck, back, arms, forehead and
-                    chest. The causal factors include; hormonal imbalance,
-                    stress, pollution, lifestyle, health conditions, etc.
+                    A chemical peel is a procedure in which a chemical solution
+                    is applied to the skin to remove the top layers. The skin
+                    that grows back is smoother. With a light or medium peel,
+                    you may need to undergo the procedure more than once to get
+                    the desired results.
                   </p>
+                  <h5>
+                    <i class="fas fa-caret-right"></i>
+                    Clean up, Pore tightening, Dermaroller treatment,
+                    Stretchmark treatment
+                  </h5>
                   <p>
-                    With advancement in dermatology, the treatment for all kinds
-                    of acne – from mild, moderate to severe; is possible with
-                    unparalleled benefits. A key to deal with acne is early and
-                    dedicated treatment under an expert dermatologist,
-                    emphasizing both the root cause and aesthetic aspects,
-                    simultaneously. Mohan Skin Care is proud to be the most
-                    preferred destination for both men and women of all ages,
-                    suffering from different kinds of acne.
+                    A derma roller is a skincare device used to treat fine
+                    lines, acne scars, large pores, and uneven skin tone. The
+                    device features a handle and a roller with tiny needles on
+                    its surface to puncture the skin and stimulate collagen
+                    production. Once you gently roll this device on your skin,
+                    it causes tiny pricks and then allows the skin’s wound
+                    healing response to begin, which eventually causes your skin
+                    to get plumper and smoother.
                   </p>
                 </div>
                 <div class="col-md-5 my-md-n5">
@@ -214,7 +224,7 @@
                         height="100%"
                         clip-path="url(#mask)"
                         preserveAspectRatio="xMidYMid slice"
-                        href="/images/pimple.jpg"
+                        href="images/peel.jpg"
                       />
                     </svg>
                   </div>
@@ -241,56 +251,66 @@
                         height="100%"
                         clip-path="url(#mask)"
                         preserveAspectRatio="xMidYMid slice"
-                        href="/images/Skin-Infections.jpg"
+                        href="images/ear.png"
                       />
                     </svg>
                   </div>
                 </div>
                 <div class="col-md-7">
-                  <h5><i class="fas fa-caret-right"></i> Allergy</h5>
-                  <p>
-                    A skin allergy is when skin becomes irritated because the
-                    immune system reacted to something that is usually harmless.
-                    This is called an allergic reaction. An allergic reaction
-                    can cause rash, itching, burning, redness, bumps, hives, and
-                    swelling. Many different allergens can cause a reaction.
-                  </p>
                   <h5>
-                    <i class="fas fa-caret-right my-3"></i> Skin Infections
+                    <i class="fas fa-caret-right"></i> Corn & Callus removal
                   </h5>
                   <p>
-                    Your skin is the largest organ of your body. Its function is
-                    to protect your body from infection. Sometimes the skin
-                    itself becomes infected. Skin infections are caused by a
-                    wide variety of germs, and symptoms can vary from mild to
-                    serious. Mild infections may be treatable with
-                    over-the-counter medications and home remedies, whereas
-                    other infections may require medical attention.
+                    Corns and calluses are foot problems that can be treated
+                    with many types of medicated products to chemically pare
+                    down the thickened, dead skin.
+                  </p>
+                  <h5>
+                    <i class="fas fa-caret-right my-3"></i> Ear lobe repair
+                  </h5>
+                  <p>
+                    Ears are an essential part of the face. Any abnormality is
+                    immediately noticeable. Enlarged ear holes or split earlobes
+                    don’t look aesthetically pleasing.
+                  </p>
+                  <h5>
+                    <i class="fas fa-caret-right"></i> Electrosurgery – Warts,
+                    moles, skin tag*
+                  </h5>
+                  <p>
+                    Electro Surgery is used to remove common skin growths and
+                    lumps and bumps on the face and body. The procedure is
+                    relatively quick to perform and leaves minimal scarring.
                   </p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-7">
+                  <h5><i class="fas fa-caret-right"></i> Skin Biopsy</h5>
+                  <p>
+                    A skin biopsy is a procedure in which a doctor cuts and
+                    removes a small sample of skin to have it tested. This
+                    sample may help your doctor diagnose diseases such as skin
+                    cancer, infection, or other skin disorders.
+                  </p>
                   <h5>
-                    <i class="fas fa-caret-right"></i> Pediatric Dermatology
+                    <i class="fas fa-caret-right my-3"></i> Iontophoresis for
+                    sweating
                   </h5>
                   <p>
-                    If your child has a skin condition, such as a birthmark,
-                    eczema, warts, or psoriasis, a pediatric dermatologist has
-                    the experience and qualifications to treat your child.
-                    Pediatric dermatologists treat a wide variety of pediatric
-                    skin conditions using the latest available treatment
-                    methods. Pediatric dermatologists treat children from birth
-                    through adolescence.
+                    For people with hyperhidrosis of the hands and/or feet,
+                    iontophoresis treatments has been shown to dramatically
+                    decrease sweating. One study found that iontophoresis helped
+                    91% of patients with excessive palmoplantar (hands and feet)
+                    sweating.
                   </p>
-                  <h5><i class="fas fa-caret-right my-3"></i> Psoriasis</h5>
+                  <h5><i class="fas fa-caret-right my-3"></i> Microneedling</h5>
                   <p>
-                    Psoriasis is thought to be an immune system problem.
-                    Triggers include infections, stress and cold. The most
-                    common symptom is a rash on the skin, but sometimes the rash
-                    involves the nails or joints. Treatment aims to remove
-                    scales and stop skin cells from growing so quickly. Topical
-                    ointments, light therapy and medication can offer relief.
+                    Microneedling is a cosmetic procedure. It involves pricking
+                    the skin with tiny sterilized needles. The small wounds
+                    cause your body to make more collagen and elastin, which
+                    heal your skin and help you look younger. You might also
+                    hear it called collagen induction therapy.
                   </p>
                 </div>
                 <div class="col-md-5 my-md-n5">
@@ -312,10 +332,73 @@
                         height="100%"
                         clip-path="url(#mask)"
                         preserveAspectRatio="xMidYMid slice"
-                        href="/images/Child.jpg"
+                        href="images/Microneedling.jpg"
                       />
                     </svg>
                   </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-5">
+                  <div class="floating-image">
+                    <svg
+                      viewBox="0 0 20 18"
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      stroke-linejoin="round"
+                    >
+                      <clipPath id="mask">
+                        <path
+                          d="M 7 0 c 2.348 0 4 1 8 1 c 4 0 2 2 2 4 c 1 7 -1 8 -4 8 c -2 0 -2 1 -5 0 c -3 -1 -6 4 -7 -3 C 0 2 0 1 6 0 z"
+                        />
+                      </clipPath>
+                      <image
+                        width="100%"
+                        height="100%"
+                        clip-path="url(#mask)"
+                        preserveAspectRatio="xMidYMid slice"
+                        href="images/tight.jpg"
+                      />
+                    </svg>
+                  </div>
+                </div>
+                <div class="col-md-7">
+                  <h5>
+                    <i class="fas fa-caret-right"></i> PRP Vampire Facelift
+                    treatment
+                  </h5>
+                  <p>
+                    The Vampire facelift corrects all the four elements
+                    essential to a beautiful face. The HA filler combined with
+                    platelet-rich plasma corrects the shape and improves
+                    texture. The platelet-rich plasma (PRP) enhances color due
+                    to the new blood vessels bringing more color to the skin.
+                  </p>
+                  <h5>
+                    <i class="fas fa-caret-right my-3"></i> Skin whitening
+                    treatment
+                  </h5>
+                  <p>
+                    Skin-whitening is the process by which people reduce the
+                    melanin pigment in the skin to give a whiter complexion.
+                  </p>
+                  <h5><i class="fas fa-caret-right"></i> Skin tightening</h5>
+                  <p>
+                    Non-surgical skin tightening procedures work by using
+                    targeted energy to heat deeper layers of skin, which
+                    stimulates collagen and elastin production and gradually
+                    improves skin tone and texture.
+                  </p>
+                  <h5>
+                    <i class="fas fa-caret-right"></i> Lasers – Hair removal,
+                    pigmentation, Acne, Tattoo removal
+                  </h5>
+                  <p>
+                    Lasers remove hair, acne, pigmentation and tattoos by
+                    breaking up the pigment colors with a high-intensity light
+                    beam.
+                  </p>
                 </div>
               </div>
             </div>
@@ -326,11 +409,11 @@
         <ul class="list-item">
           <!-- Start Single Service List -->
           <li>
-            <a href="cosmology.html">
+            <a href="dermatology.html">
               <div class="icon-image">
-                <img src="images/facial.png" alt="" />
+                <img src="images/spots.png" alt="" />
               </div>
-              <div class="text">Cosmetic and Aesthetic Science</div>
+              <div class="text">Dermatology</div>
             </a>
           </li>
           <!-- End Single Service List -->
