--- a/dermatology.html
+++ b/dermatology.html
@@ -76,7 +76,7 @@
                       <li class="nav-item">
                         <a
                           class="nav-link active"
-                          href="services-detail.html"
+                          href="services.html"
                           role="button"
                         >
                           Services
@@ -119,7 +119,7 @@
     <section class="parallax-wrapper">
       <div
         class="title-hero-bg parallax contact-cover-bg"
-        style="background-image: url(/images/derma1.jpg)"
+        style="background-image: url(images/derma1.jpg)"
       >
         <div class="container">
           <div class="page-title text-center">
@@ -214,7 +214,7 @@
                         height="100%"
                         clip-path="url(#mask)"
                         preserveAspectRatio="xMidYMid slice"
-                        href="/images/pimple.jpg"
+                        href="images/pimple.jpg"
                       />
                     </svg>
                   </div>
@@ -241,7 +241,7 @@
                         height="100%"
                         clip-path="url(#mask)"
                         preserveAspectRatio="xMidYMid slice"
-                        href="/images/Skin-Infections.jpg"
+                        href="images/Skin-Infections.jpg"
                       />
                     </svg>
                   </div>
@@ -312,7 +312,7 @@
                         height="100%"
                         clip-path="url(#mask)"
                         preserveAspectRatio="xMidYMid slice"
-                        href="/images/Child.jpg"
+                        href="images/Child.jpg"
                       />
                     </svg>
                   </div>
@@ -326,7 +326,7 @@
         <ul class="list-item">
           <!-- Start Single Service List -->
           <li>
-            <a href="cosmology.html">
+            <a href="cosmetology.html">
               <div class="icon-image">
                 <img src="images/facial.png" alt="" />
               </div>
