--- a/services.html
+++ b/services.html
@@ -76,7 +76,7 @@
                       <li class="nav-item">
                         <a
                           class="nav-link active"
-                          href="services-detail.html"
+                          href="services.html"
                           role="button"
                         >
                           Services
@@ -177,7 +177,7 @@
                   <!-- End Single Service List -->
                   <!-- Start Single Service List -->
                   <li>
-                    <a href="service-details.html">
+                    <a href="cosmetology.html">
                       <div class="icon-image">
                         <img src="images/facial.png" alt="" />
                       </div>
