--- a/cosmetology.html
+++ b/cosmetology.html
@@ -119,7 +119,7 @@
     <section class="parallax-wrapper">
       <div
         class="title-hero-bg parallax contact-cover-bg"
-        style="background-image: url(/images/cosmo.jpg)"
+        style="background-image: url(images/cosmo.jpg)"
       >
         <div class="container">
           <div class="page-title text-center">
