--- a/contact-us-2.html
+++ b/contact-us-2.html
@@ -370,9 +370,13 @@
       <div class="container container-custom">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-4">
-            <div class="foot-contact-block">
-              <img src="images/foot-logo.png" class="img-fluid" alt="#" />
-              <p>
+            <div class="foot-contact-block gs_reveal">
+              <img
+                src="images/foot-logo.png"
+                class="img-fluid gs_reveal"
+                alt="#"
+              />
+              <p class="gs_reveal">
                 TRA- 155, Karakkamandapam,
 
                 <br />
@@ -388,8 +392,12 @@
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-2 offset-lg-1">
-            <div class="foot-link-box">
-              <h4>Quick Links</h4>
+            <div class="foot-link-box gs_reveal">
+              <h4>
+                Quick Links
+                <span class="animate-border border-white"></span>
+              </h4>
+
               <ul>
                 <li>
                   <a href="about.html"
@@ -403,7 +411,7 @@
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html"
+                  <a href="services.html"
                     ><i class="fas fa-angle-double-right"></i>Services</a
                   >
                 </li>
@@ -426,41 +434,44 @@
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-2">
-            <div class="foot-link-box">
-              <h4>Our Services</h4>
+            <div class="foot-link-box gs_reveal">
+              <h4>
+                Our Services <span class="animate-border border-white"></span>
+              </h4>
               <ul>
                 <li>
-                  <a href="services-detail.html#dermatology"
+                  <a href="dermatology.html"
                     ><i class="fas fa-angle-double-right"></i>Dermatology</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#cosmetology"
+                  <a href="cosmetology.html"
                     ><i class="fas fa-angle-double-right"></i>Cosmetology and
                     Aesthetic sciences</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#trichology"
+                  <a href="trichology.html"
                     ><i class="fas fa-angle-double-right"></i>Trichology</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#gastro"
+                  <a href="gastro.html"
                     ><i class="fas fa-angle-double-right"></i>Gastro Care</a
                   >
                 </li>
               </ul>
             </div>
           </div>
-          <div class="col-md-4 col-lg-2 offset-lg-1">
+          <div class="col-md-4 col-lg-2 offset-lg-1 gs_reveal">
             <div class="foot-link-box footlink-box_btn">
               <a
                 href="https://g.page/mohan-skin-and-gastro-care?share"
-                class="btn btn-outline-success"
+                class="btn btn-secondary"
                 >Clinic Location</a
               >
-              <a href="contact-us-2.html" class="btn btn-outline-success"
+
+              <a href="contact-us-2.html" class="btn btn-secondary"
                 >Contact Us</a
               >
               <ul>
@@ -486,7 +497,10 @@
         <div class="row">
           <div class="col-md-12">
             <div class="copyright">
-              <p>© Mohan Skin & Gastro Care 2021 All rights Reserved</p>
+              <p>
+                © Mohan Skin & Gastro Care 2021 All rights Reserved |
+                <a href="https://scribblepanda.in">scribbled by the 🐼</a>
+              </p>
               <a href="#" id="scroll"><i class="fas fa-angle-double-up"></i></a>
             </div>
           </div>
