--- a/doctors.html
+++ b/doctors.html
@@ -67,11 +67,7 @@
                       </li>
                       <!-- Sub Menu -->
                       <li class="nav-item">
-                        <a
-                          class="nav-link"
-                          href="services-detail.html"
-                          role="button"
-                        >
+                        <a class="nav-link" href="services.html" role="button">
                           Services
                         </a>
                       </li>
@@ -84,7 +80,6 @@
                           Our Doctors
                         </a>
                       </li>
-
                       <!--//End Sub Menu -->
                       <li class="nav-item">
                         <a class="nav-link" href="gallery.html" role="button">
@@ -114,20 +109,15 @@
       </div>
     </header>
     <!-- Sub header -->
-    <section class="space sticknavi sub-header">
-      <div class="container container-custom">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="sub-header_content">
-              <p>OUR DOCTORS</p>
-              <h3>The human body is the best picture of the human soul.</h3>
-              <span><i>- Tony Robbins</i></span>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="sub-header_main">
-              <h2>Our Doctors</h2>
-            </div>
+    <section class="parallax-wrapper">
+      <div
+        class="title-hero-bg parallax contact-cover-bg"
+        style="background-image: url(images/gallery/vtlk.jpg)"
+      >
+        <div class="container">
+          <div class="page-title text-center">
+            <h1>Our Doctors</h1>
+            <h4 class="text-uppercase mt-30 white-color">Home / Doctors</h4>
           </div>
         </div>
       </div>
@@ -148,7 +138,7 @@
         <div class="row">
           <div class="col-md-12">
             <img src="images/gallery/artlk.jpg" alt="" class="img-fluid mb-4" />
-            <p>
+            <p class="sticknavi">
               Mohan’s Skin and Gastro Care has a dedicated Gastro division
               headed by <strong>Mr. Anush Mohan,</strong> a capable and
               distinguished Surgical
@@ -325,7 +315,12 @@
             "
           >
             <div class="counter-btn_block">
-              <a href="contact-us-2.html" class="btn btn-success">BOOK NOW</a>
+              <div class="button_su gs_reveal">
+                <span class="su_button_circle"> </span>
+                <a href="contact-us-2.html" class="button_su_inner">
+                  <span class="button_text_container"> Book Now </span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -337,9 +332,13 @@
       <div class="container container-custom">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-4">
-            <div class="foot-contact-block">
-              <img src="images/foot-logo.png" class="img-fluid" alt="#" />
-              <p>
+            <div class="foot-contact-block gs_reveal">
+              <img
+                src="images/foot-logo.png"
+                class="img-fluid gs_reveal"
+                alt="#"
+              />
+              <p class="gs_reveal">
                 TRA- 155, Karakkamandapam,
 
                 <br />
@@ -355,8 +354,12 @@
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-2 offset-lg-1">
-            <div class="foot-link-box">
-              <h4>Quick Links</h4>
+            <div class="foot-link-box gs_reveal">
+              <h4>
+                Quick Links
+                <span class="animate-border border-white"></span>
+              </h4>
+
               <ul>
                 <li>
                   <a href="about.html"
@@ -370,7 +373,7 @@
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html"
+                  <a href="services.html"
                     ><i class="fas fa-angle-double-right"></i>Services</a
                   >
                 </li>
@@ -393,41 +396,44 @@
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-2">
-            <div class="foot-link-box">
-              <h4>Our Services</h4>
+            <div class="foot-link-box gs_reveal">
+              <h4>
+                Our Services <span class="animate-border border-white"></span>
+              </h4>
               <ul>
                 <li>
-                  <a href="services-detail.html#dermatology"
+                  <a href="dermatology.html"
                     ><i class="fas fa-angle-double-right"></i>Dermatology</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#cosmetology"
+                  <a href="cosmetology.html"
                     ><i class="fas fa-angle-double-right"></i>Cosmetology and
                     Aesthetic sciences</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#trichology"
+                  <a href="trichology.html"
                     ><i class="fas fa-angle-double-right"></i>Trichology</a
                   >
                 </li>
                 <li>
-                  <a href="services-detail.html#gastro"
+                  <a href="gastro.html"
                     ><i class="fas fa-angle-double-right"></i>Gastro Care</a
                   >
                 </li>
               </ul>
             </div>
           </div>
-          <div class="col-md-4 col-lg-2 offset-lg-1">
+          <div class="col-md-4 col-lg-2 offset-lg-1 gs_reveal">
             <div class="foot-link-box footlink-box_btn">
               <a
                 href="https://g.page/mohan-skin-and-gastro-care?share"
-                class="btn btn-outline-success"
+                class="btn btn-secondary"
                 >Clinic Location</a
               >
-              <a href="contact-us-2.html" class="btn btn-outline-success"
+
+              <a href="contact-us-2.html" class="btn btn-secondary"
                 >Contact Us</a
               >
               <ul>
@@ -453,7 +459,10 @@
         <div class="row">
           <div class="col-md-12">
             <div class="copyright">
-              <p>© Mohan Skin & Gastro Care 2021 All rights Reserved</p>
+              <p>
+                © Mohan Skin & Gastro Care 2021 All rights Reserved |
+                <a href="https://scribblepanda.in">scribbled by the 🐼</a>
+              </p>
               <a href="#" id="scroll"><i class="fas fa-angle-double-up"></i></a>
             </div>
           </div>
@@ -468,5 +477,26 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- Script Js -->
     <script src="js/script.js"></script>
+    <script>
+      window.addEventListener("scroll", throttle(parallax, 14));
+
+      function throttle(fn, wait) {
+        var time = Date.now();
+        return function () {
+          if (time + wait - Date.now() < 0) {
+            fn();
+            time = Date.now();
+          }
+        };
+      }
+
+      function parallax() {
+        var scrolled = window.pageYOffset;
+        var parallax = document.querySelector(".parallax");
+        // You can adjust the 0.4 to change the speed
+        var coords = scrolled * 0.6 + "px";
+        parallax.style.transform = "translateY(" + coords + ")";
+      }
+    </script>
   </body>
 </html>
