--- a/dermatology.html
+++ b/dermatology.html
@@ -378,7 +378,7 @@
                       Are you feeling Skin Problems?
                       <span>Free talk with us for support.</span>
                     </h3>
-                    <a href="#know-more" class="custom-btn btn-16">Know More</a>
+                    <a href="contact-us-2.html" class="custom-btn btn-16">Know More</a>
                   </div>
                   <div class="image-1">
                     <img
