--- a/services.html
+++ b/services.html
@@ -236,7 +236,9 @@
                     Are you felling Skin / Gas troubles ?
                     <span>Free talk with us for support.</span>
                   </h3>
-                  <a href="#know-more" class="custom-btn btn-16">Know More</a>
+                  <a href="contact-us-2.html" class="custom-btn btn-16"
+                    >Know More</a
+                  >
                 </div>
                 <div class="image-1">
                   <img
