--- a/trichology.html
+++ b/trichology.html
@@ -383,10 +383,12 @@
                 <div class="contact-banner-area">
                   <div class="content">
                     <h3 class="title">
-                      Are you feeling Skin Problems?
+                      Are you feeling Hair Problems?
                       <span>Free talk with us for support.</span>
                     </h3>
-                    <a href="#know-more" class="custom-btn btn-16">Know More</a>
+                    <a href="contact-us-2.html" class="custom-btn btn-16"
+                      >Know More</a
+                    >
                   </div>
                   <div class="image-1">
                     <img
