--- a/gastro.html
+++ b/gastro.html
@@ -179,25 +179,25 @@
               <div class="row">
                 <div class="col-md-7">
                   <p>
-                    Acne, pimples or zits are more common among teenagers, but
-                    they are increasingly becoming prominent in adults and
-                    elderlies. It is largely caused by increased activity of the
-                    sebaceous glands (oil producing glands under the skin). They
-                    are found mainly on the face, neck, back, arms, forehead and
-                    chest. The causal factors include; hormonal imbalance,
-                    stress, pollution, lifestyle, health conditions, etc.
+                    Colorectal and anal diseases are extremely common,
+                    particularly in developed countries. Hemorrhoids are a
+                    frequent source of irritating symptoms, and colorectal
+                    cancer is one of the three most common cancers in these
+                    countries. As a direct result, the treatment of these
+                    conditions often results in complications, which may be
+                    life-threatening or disabling and sufficient to give rise to
+                    profound resentment in the patient who subsequently may seek
+                    retribution via various legal agencies.
                   </p>
                   <p>
-                    With advancement in dermatology, the treatment for all kinds
-                    of acne – from mild, moderate to severe; is possible with
-                    unparalleled benefits. A key to deal with acne is early and
-                    dedicated treatment under an expert dermatologist,
-                    emphasizing both the root cause and aesthetic aspects,
-                    simultaneously. Mohan Skin Care is proud to be the most
-                    preferred destination for both men and women of all ages,
-                    suffering from different kinds of acne.
+                    These conditions can range from mild irritations to serious
+                    illnesses. Fortunately, a variety of screening and treatment
+                    options can help you and your provider pinpoint your
+                    specific colorectal condition and help you live the
+                    healthiest life possible.
                   </p>
                 </div>
+
                 <div class="col-md-5 my-md-n5">
                   <div class="floating-image">
                     <svg
@@ -217,7 +217,7 @@
                         height="100%"
                         clip-path="url(#mask)"
                         preserveAspectRatio="xMidYMid slice"
-                        href="images/pimple.jpg"
+                        href="images/colon.jpg"
                       />
                     </svg>
                   </div>
@@ -244,56 +244,54 @@
                         height="100%"
                         clip-path="url(#mask)"
                         preserveAspectRatio="xMidYMid slice"
-                        href="images/Skin-Infections.jpg"
+                        href="images/gallbladder-pain.jpg"
                       />
                     </svg>
                   </div>
                 </div>
                 <div class="col-md-7">
-                  <h5><i class="fas fa-caret-right"></i> Allergy</h5>
-                  <p>
-                    A skin allergy is when skin becomes irritated because the
-                    immune system reacted to something that is usually harmless.
-                    This is called an allergic reaction. An allergic reaction
-                    can cause rash, itching, burning, redness, bumps, hives, and
-                    swelling. Many different allergens can cause a reaction.
-                  </p>
                   <h5>
-                    <i class="fas fa-caret-right my-3"></i> Skin Infections
+                    <i class="fas fa-caret-right"></i> Gallbladder Problems
                   </h5>
                   <p>
-                    Your skin is the largest organ of your body. Its function is
-                    to protect your body from infection. Sometimes the skin
-                    itself becomes infected. Skin infections are caused by a
-                    wide variety of germs, and symptoms can vary from mild to
-                    serious. Mild infections may be treatable with
-                    over-the-counter medications and home remedies, whereas
-                    other infections may require medical attention.
+                    Your gallbladder is a four-inch, pear-shaped organ. It’s
+                    positioned under your liver in the upper-right section of
+                    your abdomen. The gallbladder stores bile, a combination of
+                    fluids, fat, and cholesterol. Bile helps break down fat from
+                    food in your intestine. The gallbladder delivers bile into
+                    the small intestine. This allows fat-soluble vitamins and
+                    nutrients to be more easily absorbed into the bloodstream.
+                  </p>
+                  <p>
+                    While gallbladder problems are rarely deadly, they should
+                    still be treated. You can prevent gallbladder problems from
+                    worsening if you take action and see a doctor.
                   </p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-7">
                   <h5>
-                    <i class="fas fa-caret-right"></i> Pediatric Dermatology
+                    <i class="fas fa-caret-right"></i>Gastrointestinal problems
                   </h5>
                   <p>
-                    If your child has a skin condition, such as a birthmark,
-                    eczema, warts, or psoriasis, a pediatric dermatologist has
-                    the experience and qualifications to treat your child.
-                    Pediatric dermatologists treat a wide variety of pediatric
-                    skin conditions using the latest available treatment
-                    methods. Pediatric dermatologists treat children from birth
-                    through adolescence.
+                    GERD, diarrhea and colorectal cancer are examples of
+                    gastrointestinal diseases. When examined, some diseases show
+                    nothing wrong with the GI tract, but there are still
+                    symptoms. Other diseases have symptoms, and there are also
+                    visible irregularities in the GI tract. Most
+                    gastrointestinal diseases can be prevented and/or treated.
                   </p>
-                  <h5><i class="fas fa-caret-right my-3"></i> Psoriasis</h5>
+                  <h5>
+                    <i class="fas fa-caret-right my-3"></i> Hepatobiliary
+                    disease
+                  </h5>
                   <p>
-                    Psoriasis is thought to be an immune system problem.
-                    Triggers include infections, stress and cold. The most
-                    common symptom is a rash on the skin, but sometimes the rash
-                    involves the nails or joints. Treatment aims to remove
-                    scales and stop skin cells from growing so quickly. Topical
-                    ointments, light therapy and medication can offer relief.
+                    Hepatobiliary disease is any disorder of the hepatobiliary
+                    system that impairs its normal function. The disease can
+                    range from minor infection or scarring to serious conditions
+                    such as cancer. The organs of the hepatobiliary system are
+                    the liver, gallbladder and bile ducts.
                   </p>
                 </div>
                 <div class="col-md-5 my-md-n5">
@@ -315,10 +313,56 @@
                         height="100%"
                         clip-path="url(#mask)"
                         preserveAspectRatio="xMidYMid slice"
-                        href="images/Child.jpg"
+                        href="images/gastro-i.jpg"
                       />
                     </svg>
                   </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-5">
+                  <div class="floating-image">
+                    <svg
+                      viewBox="0 0 20 18"
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      stroke-linejoin="round"
+                    >
+                      <clipPath id="mask">
+                        <path
+                          d="M 7 0 c 2.348 0 4 1 8 1 c 4 0 2 2 2 4 c 1 7 -1 8 -4 8 c -2 0 -2 1 -5 0 c -3 -1 -6 4 -7 -3 C 0 2 0 1 6 0 z"
+                        />
+                      </clipPath>
+                      <image
+                        width="100%"
+                        height="100%"
+                        clip-path="url(#mask)"
+                        preserveAspectRatio="xMidYMid slice"
+                        href="images/bandage.jpg"
+                      />
+                    </svg>
+                  </div>
+                </div>
+                <div class="col-md-7">
+                  <h5>
+                    <i class="fas fa-caret-right"></i> Service related to –
+                    Gastrointestinal surgery, Weight loss surgery and advanced
+                    laparoscopic surgery
+                  </h5>
+                  <p>
+                    Advanced laparoscopy is an open surgery where an incision is
+                    made in the skin of the abdomen. The incision can be up to
+                    several inches in length, but is usually no more than a 1/2
+                    an inch in length. Advanced laparoscopic surgery is also
+                    known as minimally invasive surgery.
+                  </p>
+                  <p>
+                    Whatever your surgical Gastro requirements, our specialist
+                    will guide you through the process and help you overcome the
+                    complications. It is a matter of pride and happiness to be
+                    able to help you.
+                  </p>
                 </div>
               </div>
             </div>
