nav links update

--- a/gallery.html
+++ b/gallery.html
@@ -78,11 +78,7 @@
                       </li>
                       <!-- Sub Menu -->
                       <li class="nav-item">
-                        <a
-                          class="nav-link"
-                          href="services-detail.html"
-                          role="button"
-                        >
+                        <a class="nav-link" href="services.html" role="button">
                           Services
                         </a>
                       </li>
