--- a/contact-us-2.html
+++ b/contact-us-2.html
@@ -69,7 +69,7 @@
                       <li class="nav-item">
                         <a
                           class="nav-link"
-                          href="services-detail.html"
+                          href="services.html"
                           role="button"
                         >
                           Services
