--- a/doctors.html
+++ b/doctors.html
@@ -36,7 +36,7 @@
                 <!-- Nav menu -->
                 <nav class="navbar navbar-expand-lg navbar-light">
                   <a class="navbar-brand" href="index.html"
-                    ><img src="images/logo.png" height="60" alt="#"
+                    ><img src="images/logo.png" class="img-fluid" alt="#"
                   /></a>
                   <button
                     class="navbar-toggler nav-custome1"
